# HTM-HashJoin

./: .gitignore  .gitmodules  AtomicHashBuild.cpp  AtomicHashBuild.hpp  CMakeLists.txt  HTMAdaptive.hpp  HTMAlternate.hpp  HTMHashBuild.cpp  HTMHashBuild.hpp  HTMSolo.cpp  HTMSwitch.hpp  JustHashBuild.cpp  LICENSE  Makefile  NoCCHashBuild.hpp  README.md  SortMerge.cpp  SortMerge.hpp  TestBed.cpp  config.h  main.cpp  simple.cpp
experiments/: AtomicsVsHTMVsNoCC.sh  AtomicsVsHTMVsNoCC_log  SizeToAbortsAndTimeShuffled.sh  SizeToAbortsAndTimeSorted.sh  SizeToAbortsAndTimeSorted_log  TSizeAndShuffleWindowstoTime.sh  TSizeAndShuffleWindowstoTime_log  TSizeAndShuffleWindowstoTime_log0  TSizeAndShuffleWindowstoTime_log2  TSizeAndShuffleWindowstoTimelog1  TSizeAndShuffleWindowstoTimelog2  TSizeAndShuffleWindowstoTimelog3  TSizeAndShuffleWindowstoTimelog4  TSizeAndShuffleWindowstoTimelog5  adaptive.sh  adaptive2.sh  adaptive2_log  adaptive_log  adaptive_log2  adaptive_parallelism_log1  adaptive_parallelism_log2  adaptive_parallelism_log3  adaptive_parallelism_log4  adaptive_parallelism_log5  motivation.sh  motivation_log  motivation_log3  overflow_log1  overflow_log2  probe.sh  runner.sh  track.sh  track_log  uniform.sh
experiments/alt/: probe_log1  probe_log2  probe_log3  probe_log4  probe_log5
experiments/new_backup/: AtomicsVsHTMVsNoCC_log1  AtomicsVsHTMVsNoCC_log2  AtomicsVsHTMVsNoCC_log3  AtomicsVsHTMVsNoCC_log4  AtomicsVsHTMVsNoCC_log5  SizeToAbortsAndTimeShuffled_log1  SizeToAbortsAndTimeShuffled_log2  SizeToAbortsAndTimeShuffled_log3  SizeToAbortsAndTimeShuffled_log4  SizeToAbortsAndTimeShuffled_log5  SizeToAbortsAndTimeSorted_log1  SizeToAbortsAndTimeSorted_log2  SizeToAbortsAndTimeSorted_log3  SizeToAbortsAndTimeSorted_log4  SizeToAbortsAndTimeSorted_log5  TSizeAndShuffleWindowstoTime_log1  TSizeAndShuffleWindowstoTime_log2  TSizeAndShuffleWindowstoTime_log3  TSizeAndShuffleWindowstoTime_log4  TSizeAndShuffleWindowstoTime_log5  (+26 more)
include/: DataGen.hpp  data_gen.h
mc/: Makefile  config.status
(+19 files in other folders)
